<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute -->
<!-- The selectedItemPosition does seem to have an effect on the behaviour of this Spinner -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.activity.transactions.AddEditTransactionFragment">

    <data>

        <import type="com.example.fair2share.models.formdata_models.TransactionFormProperty" />

        <import type="com.example.fair2share.models.dto_models.ProfileDTOProperty" />

        <import type="com.example.fair2share.utils.Converter" />

        <variable
            name="transaction"
            type="TransactionFormProperty" />

        <variable
            name="activityParticipants"
            type="java.util.List&lt;ProfileDTOProperty&gt;" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_addedittransaction"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_addedittransaction_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fragment_create_activity_name_lbl"
            app:layout_constraintStart_toStartOf="@+id/edit_addedittransaction_name"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_addedittransaction_name"
            style="@style/FormInput"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/hint_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={transaction.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_addedittransaction_name" />

        <TextView
            android:id="@+id/txt_addedittransaction_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/txt_addedittransaction_payment"
            app:layout_constraintStart_toStartOf="@+id/edit_addedittransaction_payment"
            app:layout_constraintTop_toBottomOf="@+id/edit_addedittransaction_name" />

        <EditText
            android:id="@+id/edit_addedittransaction_payment"
            style="@style/FormInput"
            android:layout_width="150dp"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="@string/hint_payment"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="@={Converter.doubleToString(transaction.payment)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_addedittransaction_payment" />

        <TextView
            android:id="@+id/txt_addedittransaction_paidby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/txt_addedittransaction_paidby"
            app:layout_constraintStart_toStartOf="@+id/cbo_addedittransaction_paidby"
            app:layout_constraintTop_toBottomOf="@+id/edit_addedittransaction_name" />

        <!--suppress Annotator -->
        <!-- For some odd reason this Converter gets flagged as not being able to work as
        two-way binding. But when the code is being executed the binding does
        seem to work in both ways -->
        <Spinner
            android:id="@+id/cbo_addedittransaction_paidby"
            style="@style/FormInput"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:selectedItemPosition="@={Converter.friendToListIndex(activityParticipants, transaction.paidBy)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_addedittransaction_payment"
            app:layout_constraintTop_toBottomOf="@+id/txt_addedittransaction_paidby" />

        <TextView
            android:id="@+id/txt_addedittransaction_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/fragment_create_activity_description_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_addedittransaction_payment" />

        <EditText
            android:id="@+id/edit_addedittransaction_description"
            style="@style/FormInput"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/fragment_create_activity_description_placeholder"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@={transaction.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_addedittransaction_description" />

        <Button
            android:id="@+id/btn_addedittransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_addedittransaction_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
