...
                    android:layout_marginStart="10dp"
                    android:text="@string/no_candidates"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_managepeopleintransaction_candidates" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_mmanagepeopleintransaction_candidates"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...

                </androidx.recyclerview.widget.RecyclerView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_managepeopleintransaction_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
